--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Vladyslav6.github.io/goit-js-hw-11",
+  "homepage": "https://goitacademy.github.io/parcel-project-template",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
+    "build": "parcel build src/*.html --public-url /parcel-project-template/"
   },
   "repository": {
     "type": "git",
@@ -18,20 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "@vimeo/player": "^2.20.1",
-    "axios": "^1.6.2",
-    "flatpickr": "^4.6.13",
-    "install": "^0.13.0",
-    "lodash.throttle": "^4.1.1",
-    "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6",
-    "npm": "^10.2.3",
-    "simplelightbox": "^2.14.2",
-    "slim-select": "^2.7.0"
+    "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
-    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
